# digital_me

./: Makefile  README.md  docker-compose.yaml  next.config.ts  tsconfig.json
app/: layout.tsx
deploy/: Dockerfile
fury_api/: .dockerignore  .env.example  .gitignore  .openapi.generator-config.yaml  .pre-commit-config.yaml  Makefile  docker-compose.yaml  pyproject.toml
fury_api/deploy/docker/: fury_api.Dockerfile
fury_api/deploy/helm/: Chart.yaml  values.yaml
fury_api/deploy/helm/templates/: NOTES.txt  celery-worker-deployment.yaml  celery-worker-hpa.yaml  db_auth_secret.yaml.tpl  deployment.yaml  service.yaml
fury_api/deploy/helm/templates/tests/: test-connection.yaml
fury_api/docs/: 00_SETUP.md  01_PROJECT_STRUCTURE.md  02_CREATING_A_NEW_DOMAIN.md  04_DEPLOYING.md  BACKGROUND_JOBS.md  CONFIGURING_FIREBASE.md  CONTENT_FILTERING_AND_INCLUDES.md  DATABASE_AND_MIGRATIONS.md  PROMPTING.md
fury_api/docs/postmortems/: 2025-11-17_rls_nested_context_role_overwrite.md
fury_api/src/fury_api/: __init__.py  __main__.py  main.py
fury_api/src/fury_api/domain/: __init__.py  paths.py  routes.py
fury_api/src/fury_api/domain/authors/: __init__.py  controllers.py  exceptions.py  models.py  repository.py  services.py
fury_api/src/fury_api/domain/collections/: __init__.py  controllers.py  exceptions.py  models.py  repository.py  services.py
fury_api/src/fury_api/domain/content/: __init__.py  controllers.py  enums.py  exceptions.py  models.py  repository.py  services.py
fury_api/src/fury_api/domain/conversations/: __init__.py  ai.py  controllers.py  exceptions.py  models.py  repository.py  services.py  streams.py
fury_api/src/fury_api/domain/documents/: __init__.py  controllers.py  exceptions.py  models.py  repository.py  services.py
fury_api/src/fury_api/domain/health_check/: controllers.py
fury_api/src/fury_api/domain/jobs/: __init__.py  models.py  services.py
fury_api/src/fury_api/domain/jobs/tasks/: __init__.py  ai_tasks.py  base.py  datasync_tasks.py
fury_api/src/fury_api/domain/jobs/tasks/ai/: __init__.py  generate_assistant_response.py
fury_api/src/fury_api/domain/jobs/tasks/datasync/: __init__.py  fetch_all_x_bookmarks.py  fetch_x_bookmark_folder_content.py  sync_x_bookmark_folders.py
fury_api/src/fury_api/domain/organizations/: controllers.py  exceptions.py  integration_services.py  models.py  repository.py  services.py
fury_api/src/fury_api/domain/plugins/: controllers.py  models.py  repository.py
fury_api/src/fury_api/domain/sources/: __init__.py  controllers.py  exceptions.py  models.py  repository.py  services.py
fury_api/src/fury_api/lib/: __init__.py  celery_app.py  exceptions.py  lifecycle.py  pagination.py  responses.py  security.py  serializers.py  service.py  settings.py  unit_of_work.py
fury_api/src/fury_api/lib/db/: __init__.py  alembic.ini  base.py
fury_api/src/fury_api/lib/db/migrations/: env.py  script.py.mako
fury_api/src/fury_api/lib/db/migrations/versions/: 2025-01-29_genesis_2_add_users_table_2fc818493884.py  2025-01-29_genesis_3_add_users_table_to_organization_6781bf251402.py  2025-01-29_genesis_5_rls_d0cbcbb4b236.py  2025-04-09__add_active_token_id_567990e06e70.py  2025-11-17_add_schemas_for_domains_documents__7485721da8b9.py  2025-11-17_add_schemas_for_domains_documents_sources_conversations_7485721da8b9.py  2025-11-17_adjusting_document_content_to_account__f8bd14d8521d.py  2025-11-17_fixing_metadata_attribute_name_issues_ca9673d3a6bd.py  2025-11-20_extend_conversation_and_message_models__e8e179abf791.py  2025-11-23_add_cascade_on_document_relationships_7f6a0a5fb5c9.py  2025-11-24_enable_emmbedded_content_in_documents_ca818909d8fc.py  2025-11-24_remove_context_info_from_message_model_8116faf39023.py  2025-11-25_add_content_embedding_vector_d0f4e7f6c4a1.py  2025-11-27_IRREVERSABLE_drop_sources_concept_for_authors_collections_c134bcbc7280.py  (+2 more)
fury_api/src/fury_api/lib/dependencies/: __init__.py  filters.py  integrations.py  services.py  unit_of_work.py
fury_api/src/fury_api/lib/factories/: __init__.py  integrations_factory.py  service_factory.py
fury_api/src/fury_api/lib/integrations/: __init__.py  base_ai.py  community_archive.py  openai_client.py  prefect.py  stripe.py  x.py
fury_api/src/fury_api/lib/integrations/x/: __init__.py  client.py  exceptions.py
fury_api/src/fury_api/lib/integrations/x_app/: __init__.py  client.py  exceptions.py  models.py
fury_api/src/fury_api/lib/integrations/x_user/: __init__.py  client.py
fury_api/src/fury_api/lib/model_filters/: __init__.py  definitions.py  exceptions.py  models.py  parsers.py
fury_api/src/fury_api/lib/repository/: generic_sql_extended.py
fury_api/src/fury_api/lib/utils/: __init__.py  datetime.py  string.py
fury_api/src/fury_api/scripts/: generate_admin_token.py  import_author_tweets.py  import_x_bookmarks.py  setup_mock_data.py
fury_api/tests/: conftest.py  test_mock.py
fury_api/tests/domain/: __init__.py
fury_api/tests/domain/authors/: __init__.py  test_crud.py
fury_api/tests/domain/collections/: __init__.py  test_crud.py
fury_api/tests/domain/content/: __init__.py  test_complex_list.py  test_crud.py  test_list.py  test_search.py
fury_api/tests/domain/e2e/: __init__.py
fury_api/tests/e2e/: test_crud.py
fury_api/tests/fixtures/: __init__.py
fury_api/tests/helpers/: crud.py  dataset_basic.py  utils.py
(+180 files in other folders)
